set homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "website",
+  "homepage": "https://github.com/urban-smart-grow/website/",
   "version": "0.1.0",
   "private": true,
   "scripts": {
