--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "nextra-theme-docs": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "stl-viewer": "^0.12.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "eslint-plugin-mdx": "^2.0.5"
   }
 }
