--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nextra-theme-docs": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stl-viewer": "^0.12.0",
+    "react-stl-viewer": "^2.2.4",
+    "three": "^0.146.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
