--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "eslint-plugin-mdx": "^2.0.5"
+    "autoprefixer": "^10.4.13",
+    "eslint-plugin-mdx": "^2.0.5",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
