--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,7 +16,7 @@ ports:
   - port: 3000
     name: dev server
     visibility: private
-    onOpen: open-browser
+    onOpen: notify
 
 github:
   prebuilds:
