--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,6 +17,7 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "^13.0.7",
+    "next-sitemap": "^4.1.3",
     "nextra": "^2.0.1",
     "nextra-theme-docs": "^2.0.1",
     "react": "^18.2.0",
