--- a/.github/workflows/deployToGithubPages.yml
+++ b/.github/workflows/deployToGithubPages.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Generate sitemap with Next-Sitemap
-        run: ${{ steps.detect-package-manager.outputs.runner }} yarn next-sitemap
+        run: ${{ steps.detect-package-manager.outputs.runner }} next-sitemap
       - name: Static HTML export with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next export
       - name: Upload artifact
